# llm-cost-dashboard

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: alerting.rs  allocation.rs  anomaly.rs  clustering.rs  comparison.rs  error.rs  export.rs  forecast.rs  lib.rs  main.rs  recommendations.rs  scheduler.rs  session.rs  tagging.rs  trends.rs
src/api/: mod.rs
src/budget/: hierarchy.rs  mod.rs
src/cost/: anomaly.rs  mod.rs  pricing.rs
src/log/: mod.rs
src/org/: mod.rs
src/trace/: mod.rs
src/ui/: dashboard.rs  mod.rs  theme.rs  widgets.rs
src/validator/: mod.rs
src/webhook/: mod.rs
tests/: fuzz_pricing.rs  integration_tests.rs  malformed_json.rs  unit_tests.rs
