[package]
name = "llm-cost-dashboard"
version = "1.0.2"
edition = "2021"
rust-version = "1.82"
description = "Real-time terminal dashboard for LLM token spend - cost/request, projected monthly bills, per-model breakdown"
keywords = ["llm", "cost", "dashboard", "tui", "ratatui"]
categories = ["command-line-utilities", "visualization"]
license = "MIT"
repository = "https://github.com/Mattbusel/llm-cost-dashboard"
homepage = "https://github.com/Mattbusel/llm-cost-dashboard"
documentation = "https://docs.rs/llm-cost-dashboard"
readme = "README.md"
authors = ["Matt Busel <matt@example.com>"]
exclude = ["tests/fixtures/**", ".github/**"]

[features]
default = ["webhooks"]
webhooks = ["reqwest/rustls-tls"]

[[bin]]
name = "llm-dash"
path = "src/main.rs"

[lib]
name = "llm_cost_dashboard"
path = "src/lib.rs"

[dependencies]
# ratatui: terminal UI framework
ratatui = "0.29"
# crossterm: cross-platform terminal manipulation
crossterm = "0.28"
# tokio: async runtime
tokio = { version = "1", features = ["full"] }
# thiserror: zero-cost error derive
thiserror = "2"
# serde: serialization for log records
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# chrono: timestamps
chrono = { version = "0.4", features = ["serde"] }
# uuid: request IDs
uuid = { version = "1", features = ["v4", "serde"] }
# clap: CLI argument parsing
clap = { version = ">=4.0.0, <4.6.0", features = ["derive"] }
# tracing: structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# axum: HTTP API server for --serve mode
axum = "0.7"
# reqwest: HTTP client for webhook alerts (enabled via "webhooks" feature)
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }
# csv: CSV serialization for export
csv = "1"

[dev-dependencies]
tokio-test = "0.4"
# serde_json available in integration tests without re-declaring it as a dep
serde_json = "1"
# tempfile: temporary files in tests
tempfile = "3"
# criterion: micro-benchmarking harness
criterion = { version = "0.5", features = ["html_reports"] }
# proptest: property-based testing
proptest = "1"

[[bench]]
name = "cost_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
